--- a/ui/html/base.tmpl
+++ b/ui/html/base.tmpl
@@ -14,10 +14,12 @@
         </header>
         {{template "nav" .}}
         <main>
+            {{with .Flash}}
+                <div class='flash'>{{.}}</div>
+            {{end}}
             {{template "main" .}}
         </main>
         <footer>
-            <!-- Update the footer to include the current year -->
             Powered by <a href='https://golang.org/'>Go</a> in {{.CurrentYear}}
         </footer>
         <script src="/static/js/main.js" type="text/javascript"></script>
